Fix: issue27 remove horizontal scroll and centered join us section

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -226,7 +226,7 @@ address {
 
 ol,
 ul {
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 ol,
